JOO = Joomla (HikaShop + VirtueMart3)
MA  = Magento (alle ondersteunde versies)
MA1 = Magento 1
MA2 = Magento 2 (MA20, MA21 = specifieke minor versie binnen major versie 2)
OC  = OpenCart (alle ondersteunde versies)
OC1 = OpenCart 1
OC2 = OpenCart 2 (OC21, OC22, OC23 = specifieke minor versie binnen major versie 2)
OC3 = OpenCart 3
PS  = PrestaShop
VM3 = VirtueMart3 (Joomla)
WC  = WooCommerce (WordPress) (alle ondersteunde versies)
WC2 = WooCommerce 2 (WordPress)
WC3 = WooCommerce 3 (WordPress)

5.5.2 (2019-01-??)
------------------
Features:
- WC3: Added support for the 'Custom Order Numbers for WooCommerce' plugin.

Bugs:
- ALL: For refunds, the "property source" 'order' referred to an Invoice\Source
  object instead of to the hosting webshops's order object/array. The property
  source 'orderSource' now no longer exists in WC.
  NOTE: This may have consequences for your field references (veldverwijzingen)
  in your advanced settings!

5.5.1 (2018-12-13)
------------------
Features:
- ALL: Make better use of available vat class meta data to reduce the possible
  vat types of a line.
- ALL: Make better use of available meta data (by combining them) to get the vat
  rate of a line.
- WC3: WC seems to return amounts with an increased precision (was: rounded to
  the cent. now: it seems not any longer rounded).
- WC3: Follow setting 'woocommerce_tax_based_on' to determine the country code.
- WC: Use country, city and postal code of Acumulus invoice (instead of Customer
  object) to get lookup tax rates. (this also makes
  WooCommerce\Creator::getVatRateLookupMetadataByTaxClass() work in WC2...)

Bugs:
- ALL: only use the setting that defines EU vat classes when the shop might sell
  articles subject to EU vat.
- ALL: looked up vat rate meta data may be an empty array: use empty() instead
  of isset().
- ALL: looked up vat rate may still be a single float, not necessarily an array:
  'array' type hint in Completor::metaDataHas0VatRate() is incorrect.